--- a/02_Элементы_управления/Описание.md
+++ b/02_Элементы_управления/Описание.md
@@ -1,5 +1,5 @@
 ### Элементы управления - System.Windows.Control
-В WPF элемент управления обычно описывается как элемент для интерактивной связи с пользователем — т.е. он может принимать фокус и получать входные данные от клавиатуры или мыши. Очевидными примерами таких элементов являются текстовые поля и кнопки. Однако различие не всегда бывает четким. Всплывающая подсказка считается элементом управления, т.к. она появляется и пропадает в зависимости от движений мыши. Метка считается элементом управления из-за ее поддержки мнемоники (нажатия клавиш, которые передают фокус соответствующим элементам). 
+В WPF элемент управления обычно описывается как элемент для интерактивной связи с пользователем — т.е. он может принимать фокус и получать входные данные от клавиатуры или мыши. Примерами таких элементов являются текстовые поля и кнопки. Однако различие не всегда бывает четким. Всплывающая подсказка считается элементом управления, т.к. она появляется и пропадает в зависимости от движений мыши. Метка считается элементом управления из-за ее поддержки мнемоники (нажатия клавиш, которые передают фокус соответствующим элементам). 
 
 Все элементы управления происходят от класса System.Windows.Control, который наделяет их базовыми характеристиками: 
 * они позволяют определять расположение содержимого внутри элемента управления; 
