--- a/02_Элементы_управления/Описание.md
+++ b/02_Элементы_управления/Описание.md
@@ -6,3 +6,13 @@
 * они позволяют определять порядок передачи фокуса при использовании клавиши табуляции; 
 * они позволяют отображать фон, передний план и рамку; 
 * они позволяют форматировать размер и шрифт текстового содержимого. 
+
+Все элементы управления могут быть условно разделены на несколько подгрупп:
+* Элементы управления содержимым, например кнопки (Button), метки (Label)
+* Специальные контейнеры, которые содержат другие элементы, но в отличие от элементов Grid или Canvas не являются контейнерами компоновки - ScrollViewer,GroupBox
+* Декораторы, чье предназначение создание определенного фона вокруг вложенных элементов, например, Border или Viewbox.
+* Элементы управления списками, например, ListBox, ComboBox.
+* Текстовые элементы управления, например, TextBox, RichTextBox.
+* Элементы, основанные на диапазонах значений, например, ProgressBar, Slider.
+* Элементы для работ с датами, например, DatePicker и Calendar.
+* Остальные элементы управления, которые не вошли в предыдущие подгруппы, например, Image.
