--- a/02_Элементы_управления/Описание.md
+++ b/02_Элементы_управления/Описание.md
@@ -16,3 +16,16 @@
 * Элементы, основанные на диапазонах значений, например, ProgressBar, Slider.
 * Элементы для работ с датами, например, DatePicker и Calendar.
 * Остальные элементы управления, которые не вошли в предыдущие подгруппы, например, Image.
+
+
+* ___Элементы управления содержимым___ - к ним относятся классы Label, Button и ToolTip. Эти элементы могут содержать вложенные элементы, что дает им практически неограниченные визуальные возможности.
+* ___Элементы управления содержимым с заголовками___ - К ним относятся классы Tabltem, GroupBox и Expander. Эти элементы позволяют добавлять главный раздел содержимого и отдельную заглавную часть. Обычно они используются для упаковки больших блоков пользовательского интерфейса.  
+* ___Элементы управления текстом___ - к ним относятся TextBox, PasswordBox, RichTextBox. Этот набор элементов позволяет пользователям вводить текст. 
+
+• Элементы управления списком. Эти элементы отображают коллекцию элементов 
+в виде списка. К ним относятся классы ListBox и ComboBox. 
+• Элементы выбора из диапазона. У всех этих элементов есть общая черта:  
+свойство Value, которое может принимать любое значение из заранее указанного  
+диапазона. Примерами могут служить классы Slider и ProgressBar. 
+• Элементы управления датами. В эту категорию входят два класса, позволяющие 
+выбрать дату: Calendar и DatePicker. 
