--- a/02_Элементы_управления/Описание.md
+++ b/02_Элементы_управления/Описание.md
@@ -8,24 +8,12 @@
 * они позволяют форматировать размер и шрифт текстового содержимого. 
 
 Все элементы управления могут быть условно разделены на несколько подгрупп:
-* Элементы управления содержимым, например кнопки (Button), метки (Label)
-* Специальные контейнеры, которые содержат другие элементы, но в отличие от элементов Grid или Canvas не являются контейнерами компоновки - ScrollViewer,GroupBox
-* Декораторы, чье предназначение создание определенного фона вокруг вложенных элементов, например, Border или Viewbox.
-* Элементы управления списками, например, ListBox, ComboBox.
-* Текстовые элементы управления, например, TextBox, RichTextBox.
-* Элементы, основанные на диапазонах значений, например, ProgressBar, Slider.
-* Элементы для работ с датами, например, DatePicker и Calendar.
-* Остальные элементы управления, которые не вошли в предыдущие подгруппы, например, Image.
-
-
 * ___Элементы управления содержимым___ - к ним относятся классы Label, Button и ToolTip. Эти элементы могут содержать вложенные элементы, что дает им практически неограниченные визуальные возможности.
 * ___Элементы управления содержимым с заголовками___ - К ним относятся классы Tabltem, GroupBox и Expander. Эти элементы позволяют добавлять главный раздел содержимого и отдельную заглавную часть. Обычно они используются для упаковки больших блоков пользовательского интерфейса.  
-* ___Элементы управления текстом___ - к ним относятся TextBox, PasswordBox, RichTextBox. Этот набор элементов позволяет пользователям вводить текст. 
+* ___Элементы управления текстом___ - к ним относятся TextBox, PasswordBox, RichTextBox. Этот набор элементов позволяет пользователям вводить текст.
+* ___Элементы управления списком___ - к ним относятся классы ListBox и ComboBox. Эти элементы отображают коллекцию элементов в виде списка.
+* ___Элементы выбора из диапазона___ - к ним относятся классы Slider и ProgressBar. У всех этих элементов есть общая черта: свойство Value, которое может принимать любое значение из заранее указанного диапазона.
+* ___Элементы управления датами___ - В эту категорию входят два класса, позволяющие выбрать дату: Calendar и DatePicker.
+* ___Элементы декорирования___ - к ним относятся классы Border или Viewbox. Их предназначение - создание определенного фона вокруг вложенных элементов.
+* ___Остальные элементы управления___, которые не вошли в предыдущие подгруппы, например, Image.
 
-• Элементы управления списком. Эти элементы отображают коллекцию элементов 
-в виде списка. К ним относятся классы ListBox и ComboBox. 
-• Элементы выбора из диапазона. У всех этих элементов есть общая черта:  
-свойство Value, которое может принимать любое значение из заранее указанного  
-диапазона. Примерами могут служить классы Slider и ProgressBar. 
-• Элементы управления датами. В эту категорию входят два класса, позволяющие 
-выбрать дату: Calendar и DatePicker. 
