--- a/02_Элементы_управления/Описание.md
+++ b/02_Элементы_управления/Описание.md
@@ -17,3 +17,5 @@
 * ___Элементы декорирования___ - к ним относятся классы Border или Viewbox. Их предназначение - создание определенного фона вокруг вложенных элементов.
 * ___Остальные элементы управления___, которые не вошли в предыдущие подгруппы, например, Image.
 
+Общая иерархия элементов управления выглядит следующим образом:
+<img src="Controls.png" alt="Пример наследования от System.Windows.Control">
