--- a/02_Элементы_управления/Описание.md
+++ b/02_Элементы_управления/Описание.md
@@ -20,3 +20,22 @@
 #### Общая иерархия элементов управления выглядит следующим образом:
 <img align="right" src="Controls.png" alt="Пример наследования от System.Windows.Control">
 
+System.Threading.DispatcherObject
+В основе WPF лежит модель STA (Single-Thread Affinity), согласно которой за пользовательский интерфейс отвечает один поток. И чтобы пользовательский интерфейс мог взаимодействовать с другими потоками, WPF использует концепцию диспетчера - специального объекта, управляющего обменом сообщениями, через которые взаимодействуют потоки. Наследование типов от класса DispatcherObject позволяет получить доступ к подобному объекту-диспетчеру и и другим функциям по управлению параллелизмом.
+
+System.Windows.DependencyObject
+Наследование от этого класса позволяет взаимодействовать с элементами в приложении через их специальную модель свойств, которые называются свойствами зависимостей (dependency properties). Эта модель упрощает применение ряда особенностей WPF, например, привязки данных. Так, система свойств зависимостей отслеживает зависимости между значениями свойств, автоматически проверяет их и изменяет при изменении зависимости.
+
+System.Windows.Media.Visual
+Класс Visual содержит инструкции, которые отвечают за отрисовку, визуализацию объекта.
+
+System.Windows.UIElement
+Класс UIElement добавляет возможности по компоновке элемента, обработку событий и получение ввода.
+
+System.Windows.FrameworkElement
+Класс FrameworkElement добавляет поддержку привязки данных, анимации, стилий. Также добавляет ряд свойств, связанных с компоновкой (выравнивание, отступы) и ряд других.
+
+System.Windows.Controls.Control
+Класс Control представляет элемент управления, с которым взаимодействует пользователь. Этот класс добавляет ряд дополнительных свойств для поддержки элементами шрифтов, цветов фона, шрифта, а также добавляет поддержку шаблонов - специального механизма в WPF, который позволяет изменять стандартное представление элемента, кастомизировать его.
+
+И далее от класса Control наследуются непосредственно конкретные элементы управления или их базовые классы, которые получают весь функционал, добавляемый к типам в этой иерархии классов.
