--- a/02_Элементы_управления/Описание.md
+++ b/02_Элементы_управления/Описание.md
@@ -20,15 +20,10 @@
 #### Общая иерархия элементов управления выглядит следующим образом:
 <img align="right" src="Controls.png" alt="Пример наследования от System.Windows.Control">
 
-* __System.Threading.DispatcherObject__ - Диспетчер, специальный объект, управляющий обменом сообщениями, через которые взаимодействуют потоки.
-* __System.Windows.DependencyObject__ - 
-Наследование от этого класса позволяет взаимодействовать с элементами в приложении через их специальную модель свойств, которые называются свойствами зависимостей (dependency properties). Эта модель упрощает применение ряда особенностей WPF, например, привязки данных. Так, система свойств зависимостей отслеживает зависимости между значениями свойств, автоматически проверяет их и изменяет при изменении зависимости.
-
+* __System.Threading.DispatcherObject__ - Диспетчер, объект, управляющий обменом сообщениями, через которые взаимодействуют потоки.
+* __System.Windows.DependencyObject__ - Представляет объект, участвующий в системе свойств зависимостей.
 * __System.Windows.Media.Visual__ - Отвечает за отрисовку, визуализацию объекта.
 * __System.Windows.UIElement__ - Добавляет возможности по компоновке элемента, обработку событий и получение ввода.
 * __System.Windows.FrameworkElement__ - Добавляет поддержку привязки данных, анимации, стилий. Также добавляет ряд свойств, связанных с компоновкой (выравнивание, отступы) и ряд других.
-
-System.Windows.Controls.Control
-Класс Control представляет элемент управления, с которым взаимодействует пользователь. Этот класс добавляет ряд дополнительных свойств для поддержки элементами шрифтов, цветов фона, шрифта, а также добавляет поддержку шаблонов - специального механизма в WPF, который позволяет изменять стандартное представление элемента, кастомизировать его.
-
-И далее от класса Control наследуются непосредственно конкретные элементы управления или их базовые классы, которые получают весь функционал, добавляемый к типам в этой иерархии классов.
+* __System.Windows.Controls.Control__ - Представляет элемент управления, с которым взаимодействует пользователь.
+* И далее от класса Control наследуются непосредственно конкретные элементы управления или их базовые классы, которые получают весь функционал, добавляемый к типам в этой иерархии классов.
